# careers-website

./: app.py  database.py  pyproject.toml
templates/: application_form.html  application_submitted.html  banner.html  footer.html  home.html  jobitem.html  jobpage.html  nav.html  nav2.html
